--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "@nestjs/microservices": "^5.1.0",
     "@nestjs/testing": "^5.1.0",
     "@nestjs/websockets": "^5.1.0",
+    "@types/mongodb": "^3.1.2",
+    "@types/mongoose": "^5.2.2",
     "apollo-server-express": "^1.4.0",
     "body-parser": "^1.18.3",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.5",
+    "mongoose": "^5.2.5",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
+    "typegoose": "^5.2.1",
     "typescript": "^2.9.2"
   },
   "devDependencies": {
